# gnome-footprints

./: .gitignore  AUTHORS  Makefile.am  README  base.am  configure.ac  footprints.sublime-project
data/: Makefile.am  footprints.desktop.in
data/mime/: Makefile.am  footprints.xml.in
fit/: 36LF5302.FIT  FitExample.vala  Makefile.am
fit/sdk/: fit_config.h
po/: POTFILES.in
src/: Activity.vala  FITImporter.vala  Importer.vala  Makefile.am  footprints.vala
src/device/: Device.vala  GarminDevice.vala
src/fit/: COPYING  FIT_ReleaseNotes.txt  FitExample  FitExample.vala  FitSDK.vapi  Makefile.am  fit_wrapper.h
src/fit/sdk/: fit_convert.c
src/import/: FITImporter.vala  Importer.vala  TCXImporter.vala
